@@ -1,0 +1,211 @@
+<?xml version="1.0" encoding="UTF-8"?><EntitiesDescriptor xmlns="urn:oasis:names:tc:SAML:2.0:metadata" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" ID="1234" Name="urn:mace:switch.ch:SWITCHaai" validUntil="2010-09-20T15:59:02Z"><ds:Signature xmlns:ds="http://www.w3.org/2000/09/xmldsig#">
+<ds:SignedInfo>
+<ds:CanonicalizationMethod Algorithm="http://www.w3.org/2001/10/xml-exc-c14n#"/>
+<ds:SignatureMethod Algorithm="http://www.w3.org/2001/04/xmldsig-more#rsa-sha256"/>
+<ds:Reference URI="">
+<ds:Transforms>
+<ds:Transform Algorithm="http://www.w3.org/2000/09/xmldsig#enveloped-signature"/>
+<ds:Transform Algorithm="http://www.w3.org/2001/10/xml-exc-c14n#"/>
+</ds:Transforms>
+<ds:DigestMethod Algorithm="http://www.w3.org/2001/04/xmlenc#sha256"/>
+<ds:DigestValue>ZthRrkLODg4jZjtdLI1/TEJ4zWp4MKmy9enPdvYqokg=</ds:DigestValue>
+</ds:Reference>
+</ds:SignedInfo>
+<ds:SignatureValue>
+tCSSNR9i//wxJbJFZgIcF4zQSLmjoErTEg5yrcCHczYUxttXLIS9MZlV92yWKMPUtuyzCBiSWu8u
+owoleUOdA7Iv0peukzSaniH5hwxkKFdud+d4Mn+iXpCJvkOpOL/sIOSgNiOaPna9LWoYQgqzB4zQ
+pjjreExBkm6KuleuJpoA5mZu/vW9PfutalFjvztoISmgFMdtHXGtLFp+wgV8cdaz7LvOYXwKgtVA
+8nwRVSG54dtvbm5QzmZuJxGnbWQbZTX7NCRVSP8BEuMXtSwGb8ud9C/elcZRt3pWv4S8LBCqnXU2
+07YMzg/KC+cKMtkF6y6f6Ueww3yPgZCACRhxXA==
+</ds:SignatureValue>
+<ds:KeyInfo>
+<ds:KeyValue>
+<ds:RSAKeyValue>
+<ds:Modulus>
+8URyAf/z/vURAuWKo3529SGnAse7VRmjAuCbMMCK3GRr/UVx1Mpk1pf+16nzGhauKu7DeDKU9c0R
+JJlJdz+0F29ZWtL+lWiKTwFZwhpc4yAMlXZTTZuDfoLdIRIgwStrF7q5chXOAz3fBZL7w9ZwOK2i
+UmJ7Ut0Qn2TNE29JDvyBAcvorr4LhX5HIExvo79ftolj4ZIQxtt6Avz1ZO0cC/z/BnweLrRgTbKD
+HqHwx6Ei+3rY7TwdeZXAK3b2VJu9l0Hm0FPEr0QfH212/pZDytf9/h58VT0jJDpffjtqBnHWletN
+aBl/gkQBswvtvUXUCbJJ5Nv0s/kilbelBWar4Q==
+</ds:Modulus>
+<ds:Exponent>AQAB</ds:Exponent>
+</ds:RSAKeyValue>
+</ds:KeyValue>
+<ds:X509Data>
+<ds:X509Certificate>
+MIIC8DCCAdgCCQDM0iz5RbOubTANBgkqhkiG9w0BAQUFADA6MQswCQYDVQQGEwJVUzELMAkGA1UE
+CBMCTUkxDTALBgNVBAoTBEFjbWUxDzANBgNVBAMTBnRlc3RlcjAeFw0xMDA5MTUxNzMzMzZaFw0z
+MDA5MTUxNzMzMzZaMDoxCzAJBgNVBAYTAlVTMQswCQYDVQQIEwJNSTENMAsGA1UEChMEQWNtZTEP
+MA0GA1UEAxMGdGVzdGVyMIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEA8URyAf/z/vUR
+AuWKo3529SGnAse7VRmjAuCbMMCK3GRr/UVx1Mpk1pf+16nzGhauKu7DeDKU9c0RJJlJdz+0F29Z
+WtL+lWiKTwFZwhpc4yAMlXZTTZuDfoLdIRIgwStrF7q5chXOAz3fBZL7w9ZwOK2iUmJ7Ut0Qn2TN
+E29JDvyBAcvorr4LhX5HIExvo79ftolj4ZIQxtt6Avz1ZO0cC/z/BnweLrRgTbKDHqHwx6Ei+3rY
+7TwdeZXAK3b2VJu9l0Hm0FPEr0QfH212/pZDytf9/h58VT0jJDpffjtqBnHWletNaBl/gkQBswvt
+vUXUCbJJ5Nv0s/kilbelBWar4QIDAQABMA0GCSqGSIb3DQEBBQUAA4IBAQCyVcQo71Fy7Ng75UQr
+g/Nr8Ul+opFy/TP71QczIA+11PvEMUaJyFJ2nNsMCSnqcn0wPZ+S1r5B54DJzua4eoMHZ9kRIoFH
+e1lFX0lNQ2x3pb4aa23m3G4dcJGzSHJWP4oMp/jDCp8wxj3INpA4fs0dtw+iqluHP334pjM/5Dn5
+5NwVlrDAtz++SxYOJXngylff14vdjNCI4m7vBbExuhTafjHxfIlkTKt7fISCQgRyslSMOn6acvRT
+rL5V9hNlY1Vccrw18xQJXbrdPBDu4l9/8J+L1hXz9EGrbWi7thdDlNnuJI+jlYBVNpHHT9ui5Wn3
+ky2gtKCT9MVNOm3GJ/5x
+</ds:X509Certificate>
+</ds:X509Data>
+</ds:KeyInfo>
+</ds:Signature>
+
+    <Extensions>
+        <switchmd:PublishingInformation xmlns:switchmd="http://www.switch.ch/aai/metadata/extensions">
+            <switchmd:Federation>urn:mace:switch.ch:SWITCHaai</switchmd:Federation>
+            <switchmd:Description>The metadata contains all accepted root CA certificates for the federation and the
+                descriptions of all accepted Identity Providers and Service Providers</switchmd:Description>
+            <switchmd:Author>SWITCH Resource Registry</switchmd:Author>
+            <switchmd:CreationDate type="xs:dateTime">2010-09-15T15:59:02Z</switchmd:CreationDate>
+            <switchmd:Note/>
+        </switchmd:PublishingInformation>
+    </Extensions>
+
+    <EntityDescriptor entityID="https://aai.unifr.ch/idp/shibboleth">
+        <Extensions>
+            <shibmd:Scope xmlns:shibmd="urn:mace:shibboleth:metadata:1.0" regexp="false">unifr.ch</shibmd:Scope>
+        </Extensions>
+        <IDPSSODescriptor protocolSupportEnumeration="urn:oasis:names:tc:SAML:2.0:protocol urn:oasis:names:tc:SAML:1.1:protocol urn:mace:shibboleth:1.0">
+            <KeyDescriptor use="signing">
+                <ds:KeyInfo xmlns:ds="http://www.w3.org/2000/09/xmldsig#">
+                    <ds:KeyName>aai.unifr.ch</ds:KeyName>
+                    <ds:X509Data>
+                        <ds:X509Certificate>
+                            MIIDGzCCAgOgAwIBAgIUP8Gy5z0CP/joSEYbKGS0Np66XeUwDQYJKoZIhvcNAQEF
+                            BQAwFzEVMBMGA1UEAxMMYWFpLnVuaWZyLmNoMB4XDTA5MDczMDEzNTUyNVoXDTEy
+                            MDczMDEzNTUyNVowFzEVMBMGA1UEAxMMYWFpLnVuaWZyLmNoMIIBIjANBgkqhkiG
+                            9w0BAQEFAAOCAQ8AMIIBCgKCAQEAm8TgEsFh5W6xFbiqKgGj23riyn1TWp03p63z
+                            qM48wLotMWij1hAQlv3hxSTE39qvWMXt3PwOYn9Ck+O2soVIqGonCeq9MNjQUeSD
+                            uZiMUKHq0w/3l/3vbA5KR6dl3x4FaFqv7RaIbO0mu/tH5ScEteuKrNVby9ojQwsI
+                            PcTXbbRJrlFKM+2GTeE1mJhd9PquOS/iKqmIpr6c4r7hKu1nErKG7lFrqTA6exKl
+                            Nb4dUj3Gp+revcwf6UgZJwBxQ858Noy7BAeg5LT7r1dGE68YmrBPYJLj84jeNyIA
+                            /KS5zeeSWZnaHljunjEax9zoSkm3wRgfS6W2ruS/q2DdHxvOzwIDAQABo18wXTA8
+                            BgNVHREENTAzggxhYWkudW5pZnIuY2iGI2h0dHBzOi8vYWFpLnVuaWZyLmNoL2lk
+                            cC9zaGliYm9sZXRoMB0GA1UdDgQWBBT5gNjirVVpDtJqTpZJVpU7jF+LJDANBgkq
+                            hkiG9w0BAQUFAAOCAQEAM/EIJuqE1zWUuUWpbc9uxD1sNv4AQ/wBj7LlAQ4FcJem
+                            cZcycgaE1c4IC+hQGQ9pFjAoQQbJmz2P5btQ8SGpNI+gD45OOIaUa7wgKNJeDGR6
+                            vLWvyof5uNQ2Af9FpM0l23prY3phkGxtqSKvigOFIJEEuMOTrUikxFtrRdEQ6qDk
+                            y4RKFDZ92qV076YLeCI6GX+IMrSKE8GQKxvq32IEw/LlvjC21IJSeTwU9hPQsCLL
+                            06PCqiwBffRqZguTXXOWk0n/Btri44echadREWrOem6cwJuHs6nvQ/iHSjjmHVSs
+                            V29q22MI4G0dXLKIBkHsMyrEdS06vIvIbXuILzV6lQ==
+                        </ds:X509Certificate>
+                    </ds:X509Data>
+                </ds:KeyInfo>
+            </KeyDescriptor>
+            <ArtifactResolutionService Binding="urn:oasis:names:tc:SAML:1.0:bindings:SOAP-binding" Location="https://aai.unifr.ch:8443/idp/profile/SAML1/SOAP/ArtifactResolution" index="1"/>
+            <ArtifactResolutionService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://aai.unifr.ch:8443/idp/profile/SAML2/SOAP/ArtifactResolution" index="2"/>
+            <NameIDFormat>urn:mace:shibboleth:1.0:nameIdentifier</NameIDFormat>
+            <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:transient</NameIDFormat>
+            <SingleSignOnService Binding="urn:mace:shibboleth:1.0:profiles:AuthnRequest" Location="https://aai.unifr.ch/idp/profile/Shibboleth/SSO"/>
+            <SingleSignOnService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect" Location="https://aai.unifr.ch/idp/profile/SAML2/Redirect/SSO"/>
+            <SingleSignOnService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://aai.unifr.ch/idp/profile/SAML2/POST/SSO"/>
+            <SingleSignOnService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST-SimpleSign" Location="https://aai.unifr.ch/idp/profile/SAML2/POST-SimpleSign/SSO"/>
+        </IDPSSODescriptor>
+        <AttributeAuthorityDescriptor protocolSupportEnumeration="urn:oasis:names:tc:SAML:2.0:protocol urn:oasis:names:tc:SAML:1.1:protocol">
+            <KeyDescriptor use="signing">
+                <ds:KeyInfo xmlns:ds="http://www.w3.org/2000/09/xmldsig#">
+                    <ds:KeyName>aai.unifr.ch</ds:KeyName>
+                    <ds:X509Data>
+                        <ds:X509Certificate>
+                            MIIDGzCCAgOgAwIBAgIUP8Gy5z0CP/joSEYbKGS0Np66XeUwDQYJKoZIhvcNAQEF
+                            BQAwFzEVMBMGA1UEAxMMYWFpLnVuaWZyLmNoMB4XDTA5MDczMDEzNTUyNVoXDTEy
+                            MDczMDEzNTUyNVowFzEVMBMGA1UEAxMMYWFpLnVuaWZyLmNoMIIBIjANBgkqhkiG
+                            9w0BAQEFAAOCAQ8AMIIBCgKCAQEAm8TgEsFh5W6xFbiqKgGj23riyn1TWp03p63z
+                            qM48wLotMWij1hAQlv3hxSTE39qvWMXt3PwOYn9Ck+O2soVIqGonCeq9MNjQUeSD
+                            uZiMUKHq0w/3l/3vbA5KR6dl3x4FaFqv7RaIbO0mu/tH5ScEteuKrNVby9ojQwsI
+                            PcTXbbRJrlFKM+2GTeE1mJhd9PquOS/iKqmIpr6c4r7hKu1nErKG7lFrqTA6exKl
+                            Nb4dUj3Gp+revcwf6UgZJwBxQ858Noy7BAeg5LT7r1dGE68YmrBPYJLj84jeNyIA
+                            /KS5zeeSWZnaHljunjEax9zoSkm3wRgfS6W2ruS/q2DdHxvOzwIDAQABo18wXTA8
+                            BgNVHREENTAzggxhYWkudW5pZnIuY2iGI2h0dHBzOi8vYWFpLnVuaWZyLmNoL2lk
+                            cC9zaGliYm9sZXRoMB0GA1UdDgQWBBT5gNjirVVpDtJqTpZJVpU7jF+LJDANBgkq
+                            hkiG9w0BAQUFAAOCAQEAM/EIJuqE1zWUuUWpbc9uxD1sNv4AQ/wBj7LlAQ4FcJem
+                            cZcycgaE1c4IC+hQGQ9pFjAoQQbJmz2P5btQ8SGpNI+gD45OOIaUa7wgKNJeDGR6
+                            vLWvyof5uNQ2Af9FpM0l23prY3phkGxtqSKvigOFIJEEuMOTrUikxFtrRdEQ6qDk
+                            y4RKFDZ92qV076YLeCI6GX+IMrSKE8GQKxvq32IEw/LlvjC21IJSeTwU9hPQsCLL
+                            06PCqiwBffRqZguTXXOWk0n/Btri44echadREWrOem6cwJuHs6nvQ/iHSjjmHVSs
+                            V29q22MI4G0dXLKIBkHsMyrEdS06vIvIbXuILzV6lQ==
+                        </ds:X509Certificate>
+                    </ds:X509Data>
+                </ds:KeyInfo>
+            </KeyDescriptor>
+            <AttributeService Binding="urn:oasis:names:tc:SAML:1.0:bindings:SOAP-binding" Location="https://aai.unifr.ch:8443/idp/profile/SAML1/SOAP/AttributeQuery"/>
+            <AttributeService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://aai.unifr.ch:8443/idp/profile/SAML2/SOAP/AttributeQuery"/>
+            <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:transient</NameIDFormat>
+            <NameIDFormat>urn:mace:shibboleth:1.0:nameIdentifier</NameIDFormat>
+        </AttributeAuthorityDescriptor>
+        <Organization>
+            <OrganizationName xml:lang="en">unifr.ch</OrganizationName>
+            <OrganizationDisplayName xml:lang="de">Université de Fribourg - Universität
+                Freiburg</OrganizationDisplayName>
+            <OrganizationDisplayName xml:lang="en">University of Fribourg</OrganizationDisplayName>
+            <OrganizationDisplayName xml:lang="fr">Université de Fribourg - Universität
+                Freiburg</OrganizationDisplayName>
+            <OrganizationURL xml:lang="fr">http://www.unifr.ch/aai</OrganizationURL>
+        </Organization>
+    </EntityDescriptor>
+
+    <EntityDescriptor entityID="https://hestia.switch.ch/shibboleth">
+        <SPSSODescriptor protocolSupportEnumeration="urn:oasis:names:tc:SAML:2.0:protocol urn:oasis:names:tc:SAML:1.1:protocol">
+            <KeyDescriptor>
+                <ds:KeyInfo xmlns:ds="http://www.w3.org/2000/09/xmldsig#">
+                    <ds:KeyName>hestia.switch.ch</ds:KeyName>
+                    <ds:X509Data>
+                        <ds:X509Certificate>
+                            MIIE6zCCA9OgAwIBAgICGYMwDQYJKoZIhvcNAQEFBQAwazELMAkGA1UEBhMCQk0x
+                            GTAXBgNVBAoTEFF1b1ZhZGlzIExpbWl0ZWQxHzAdBgNVBAsTFnd3dy5xdW92YWRp
+                            c2dsb2JhbC5jb20xIDAeBgNVBAMTF1F1b1ZhZGlzIEdsb2JhbCBTU0wgSUNBMB4X
+                            DTA5MTEwNjE1NDYxMloXDTExMTEwNjE1NDYxMlowbDELMAkGA1UEBhMCQ0gxEDAO
+                            BgNVBAgTB1p1ZXJpY2gxEDAOBgNVBAcTB1p1ZXJpY2gxDzANBgNVBAoTBlNXSVRD
+                            SDENMAsGA1UECxMER3JpZDEZMBcGA1UEAxMQaGVzdGlhLnN3aXRjaC5jaDCCASIw
+                            DQYJKoZIhvcNAQEBBQADggEPADCCAQoCggEBALTEbtUuBQsjbDJb9YUV2dHZUEjb
+                            nCkwYACmMvOkt16Q/oqpJwYqptIaICu7VC9bnKyLwrUzfujnwld1C7jzC78gpvDC
+                            TL+q2YzOzaRf+iXXFOpBenpKQNL2gexKOwCJVm3GYPfRCv14K6CZOztFiaB45rdp
+                            uz4mKONG2YBpIqlv+eqau+I0f4HG3jyLbIbJzUHYZqyyYKuLScQt5pfnOl7SgWtw
+                            BJhb9W00zLa7+lnwpwHORCAsKPDoZ8Yuz47sSasEkEI2/IF8zKVi5nvURcv5gYQE
+                            yu88oCwWGGlK0o9YkXzWCoAhqKKr+aq6SPXHbCSAUYE/csOojGYaDSABdqcCAwEA
+                            AaOCAZYwggGSMHQGCCsGAQUFBwEBBGgwZjAqBggrBgEFBQcwAYYeaHR0cDovL29j
+                            c3AucXVvdmFkaXNnbG9iYWwuY29tMDgGCCsGAQUFBzAChixodHRwOi8vdHJ1c3Qu
+                            cXVvdmFkaXNnbG9iYWwuY29tL3F2c3NsaWNhLmNydDAbBgNVHREEFDASghBoZXN0
+                            aWEuc3dpdGNoLmNoMFEGA1UdIARKMEgwRgYMKwYBBAG+WAACZAEBMDYwNAYIKwYB
+                            BQUHAgEWKGh0dHA6Ly93d3cucXVvdmFkaXNnbG9iYWwuY29tL3JlcG9zaXRvcnkw
+                            DgYDVR0PAQH/BAQDAgWgMB0GA1UdJQQWMBQGCCsGAQUFBwMBBggrBgEFBQcDAjAf
+                            BgNVHSMEGDAWgBQyTaFP6vCumbbumwcshAgRUIvifjA7BgNVHR8ENDAyMDCgLqAs
+                            hipodHRwOi8vY3JsLnF1b3ZhZGlzZ2xvYmFsLmNvbS9xdnNzbGljYS5jcmwwHQYD
+                            VR0OBBYEFLdZ7uyB5hnQVdsFPUOSvVF23ntfMA0GCSqGSIb3DQEBBQUAA4IBAQBt
+                            p3f3dMlWqWX3+zaL21I1gRVkz4dMkLpPcTjiqTOYU7fcpYOH8LzB5Wqr3wGWmUGt
+                            lB7U9BwHkj7NFheNQEsfXu1m4m7Nw7aKxuspRtqY+0IB4QseJd+Ds/ZXJMVlwi+R
+                            IwJHFeX7m+Ypo3Y8HjT2ZjwmmX31ywyIQ33pMsBAX8DtbS1aAYlDs7s8x//X4gux
+                            p/8vUNkLdVhecIRbl0xX++mFKOyAOuEeoXQXZe48vBu6EIoYe2KpGqGuPu5now1F
+                            UhTH7MXDaBv7yUATibJJpTBaS0Gz3oUikjwWjSfsJIY1KF+vmZqtajlhKHNAAaQo
+                            /xGNZR7tBqnS8KjsJU9r
+                        </ds:X509Certificate>
+                    </ds:X509Data>
+                </ds:KeyInfo>
+            </KeyDescriptor>
+            <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect" Location="https://hestia.switch.ch/Shibboleth.sso/SLO/Redirect"/>
+            <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://hestia.switch.ch/Shibboleth.sso/SLO/POST"/>
+            <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Artifact" Location="https://hestia.switch.ch/Shibboleth.sso/SLO/Artifact"/>
+            <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://hestia.switch.ch/Shibboleth.sso/SLO/SOAP"/>
+            <ManageNameIDService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect" Location="https://hestia.switch.ch/Shibboleth.sso/NIM/Redirect"/>
+            <ManageNameIDService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://hestia.switch.ch/Shibboleth.sso/NIM/POST"/>
+            <ManageNameIDService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Artifact" Location="https://hestia.switch.ch/Shibboleth.sso/NIM/Artifact"/>
+            <ManageNameIDService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://hestia.switch.ch/Shibboleth.sso/NIM/SOAP"/>
+            <NameIDFormat>urn:mace:shibboleth:1.0:nameIdentifier</NameIDFormat>
+            <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:transient</NameIDFormat>
+            <AssertionConsumerService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://hestia.switch.ch/Shibboleth.sso/SAML2/POST" index="1"/>
+            <AssertionConsumerService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST-SimpleSign" Location="https://hestia.switch.ch/Shibboleth.sso/SAML2/POST-SimpleSign" index="2"/>
+            <AssertionConsumerService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Artifact" Location="https://hestia.switch.ch/Shibboleth.sso/SAML2/Artifact" index="3"/>
+            <AssertionConsumerService Binding="urn:oasis:names:tc:SAML:2.0:bindings:PAOS" Location="https://hestia.switch.ch/Shibboleth.sso/SAML2/ECP" index="4"/>
+            <AssertionConsumerService Binding="urn:oasis:names:tc:SAML:1.0:profiles:browser-post" Location="https://hestia.switch.ch/Shibboleth.sso/SAML/POST" index="5"/>
+            <AssertionConsumerService Binding="urn:oasis:names:tc:SAML:1.0:profiles:artifact-01" Location="https://hestia.switch.ch/Shibboleth.sso/SAML/Artifact" index="6"/>
+        </SPSSODescriptor>
+        <Organization>
+            <OrganizationName xml:lang="en">switch.ch</OrganizationName>
+            <OrganizationDisplayName xml:lang="en">SWITCH</OrganizationDisplayName>
+            <OrganizationURL xml:lang="en">http://www.switch.ch/aai/help/</OrganizationURL>
+        </Organization>
+    </EntityDescriptor>
+
+</EntitiesDescriptor>
