@@ -3,7 +3,8 @@ Release Notes - Metadata Aggregator - Version 0.8.0
 
 Highlights
    * API changes for new Shibboleth coding conventions
-   * Algorithm blacklisting during signature validation
+   * Signature validation can reject empty references, blacklist
+     algorithm URIs and protects against "wrapping" attacks.
    * Moved to Java 7, Apache Santuario V1.5
    * Improved CLI experience
    * bug fixes
@@ -46,6 +47,7 @@ API Changes
 
 ** New Feature
     * [MDA-88] - assist debugging of signature creation by making pre-digest data available
+    * [MDA-91] - allow checking that SAML metadata is signed using ID, not empty reference
     * [MDA-120] - signature validation stage should allow algorithm blacklisting
 
 ** Task
